added skills section and links to projects

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	    	<ul class="nav__list">
 	    		<li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
 	    		<li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-	    		<li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
+	    		<li class="nav__item"><a href="#about" class="nav__link">My Skills</a></li>
 	    		<li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
 	    	</ul>
 	    </nav>
@@ -39,36 +39,34 @@
 
 	<!-- My Services -->
 	<section class="my-services" id="services">
-		<h2 class="section__title section__title--services">What I do</h2>
+		<h2 class="section__title section__title--services">About Me</h2>
 		<div class="services">
 			<div class="service">
-				<h3>Design + Development</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<h3>Background</h3>
+				<p>
+					I am a self-taught developer who is passionate about learning and 
+					building full-stack applications. I received my BS in Industrial & Systems
+					Engineering from Texas A&M University in August 2018 and have been developing
+					ever since. Being born and raised in Guatemala, has given
+					me the perspective to understand how much technology, inovation, and software can improve 
+					the quality of life of underdeveloped communities. I would love to one day leverage
+					the skills I am building to contribute to that cause.
+				</p>
 			</div>    <!-- / service -->
 
-			<div class="service">
-					<h3>E-commerce</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div>    <!-- / service -->
+			    <!-- / service -->
 
 			<div class="service">
-					<h3>WordPress</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h3>Why Development?</h3>
+					<p>
+						Software development is the only skill that allows someone to 
+						build a product, service, or entertainment application and deploy it 
+						to the web for the entire world to access with nothing but a computer
+						and internet connection. I think that's pretty amazing. Personally, I want
+						to be involved in an industry that is always innovating and that has an 
+						impact on people's lives. Writing code, building applications, and solving
+						challenging puzzles and bugs are all incredibly stimulating activities for me!
+					</p>
 			</div>    <!-- / service -->
 
 		</div>  <!-- / services -->
@@ -79,22 +77,36 @@
 
 	<!-- About Me -->
 	<section class="about-me" id="about">
-		<h2 class="section__title section__title--about">Who I am</h2>
-		<p class="section__subtitle section__subtitle--about">Developer based out of Dallas</p>
+		<h2 class="section__title section__title--about">Skills</h2>
+		<p class="section__subtitle section__subtitle--about">languages, frameworks, and technologies</p>
 
 		<div class="about--me__body">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<div class="skills">
+				<div class="skill-html-node">
+					<p>HTML</p>	
+					<img src="img/html.png" class="skill-img " >
+					<p>NodeJS</p>	
+					<img src="img/node.png" class="skill-img-node" >
+				</div>
+				<div class="skill-css-express">	
+					<p>CSS</p>	
+					<img src="img/css.png" class="skill-img-css" >
+					<p>Express</p>	
+					<img src="img/express.png" class="skill-img-express" >
+				</div>
+				<div class="skill-js-pg">
+					<p>Javascript</p>	
+					<img src="img/js.png" class="skill-img" >
+					<p>PostgresSQL</p>	
+					<img src="img/pg.png" class="skill-img" >
+				</div>
+				<div class="skill-react-rest">	
+					<p>React</p>	
+					<img src="img/react.png" class="skill-img-react" >
+					<p>RESTful API's</p>	
+					<img src="img/rest.png" class="skill-img-rest" >
+				</div>
+			</div>
 		</div>
 
 		<img src="img/bsas.jpg" class="about-me__img">
@@ -108,16 +120,16 @@
 
 		<div class="portfolio">
 			<!-- Portfolio item 01 -->
-			<a href="#" class="portfolio__item">
-				<img src="img/portfolio-01.jpg" class="portfolio__img">
+			<a href="https://infinite-shore-03171.herokuapp.com/" class="portfolio__item">
+				<img src="img/twitter.png" class="portfolio__img">
 			</a>
 			<!-- Portfolio item 02 -->
-			<a href="#" class="portfolio__item">
-				<img src="img/portfolio-02.jpg" class="portfolio__img">
+			<a href="https://peaceful-mountain-33852.herokuapp.com/" class="portfolio__item">
+				<img src="img/starwars.png" class="portfolio__img">
 			</a>
 			<!-- Portfolio item 03 -->
-			<a href="#" class="portfolio__item">
-				<img src="img/portfolio-03.jpg" class="portfolio__img">
+			<a href="https://arcane-chamber-68589.herokuapp.com/" class="portfolio__item">
+				<img src="img/expense-tracker.png" class="portfolio__img">
 			</a>
 		</div>
 	</section>
