--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					I am a self-taught developer who is passionate about learning and 
 					building full-stack applications. I received my BS in Industrial & Systems
 					Engineering from Texas A&M University in August 2018 and have been developing
-					ever since. Having been born and raised in Guatemala has given
+					ever since. Being born and raised in Guatemala has given
 					me the perspective to understand how much technology, inovation, and software can improve 
 					the quality of life of underdeveloped communities. I would love to one day leverage
 					the skills I am building to contribute to that cause.
