--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 				<img src="img/starwars.png" class="portfolio__img">
 			</a>
 			<!-- Portfolio item 03 -->
-			<a href="https://arcane-chamber-68589.herokuapp.com/" class="portfolio__item">
-				<img src="img/expense-tracker.png" class="portfolio__img">
+			<a href="https://mighty-temple-84747.herokuapp.com/" class="portfolio__item">
+				<img src="img/screenshot.png" class="portfolio__img">
 			</a>
 		</div>
 	</section>
@@ -138,11 +138,6 @@
 	<footer class="footer">
 		<a href="mailto:olyslager.willy@gmail.com" class="footer__link">Olyslager.willy@gmail.com</a>
 		<ul class="social-list">
-			<li class="social-list__item">
-				<a class="social-list__link" href="https://codepen.io/dashboard/">
-					<i class="fab fa-codepen"></i>
-				</a>
-			</li>
 			<li class="social-list__item">
 				<a class="social-list__link" href="https://github.com/wolyslager">
 					<i class="fab fa-github"></i>
