changed starwars project to snake project

--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@
 
 		<div class="portfolio">
 			<!-- Portfolio item 01 -->
-			<a href="https://infinite-shore-03171.herokuapp.com/" class="portfolio__item">
+			<a href="https://infinite-shore-03171.herokuapp.com/" class="portfolio__item" target="_blank">
 				<img src="img/twitter.png" class="portfolio__img">
 			</a>
 			<!-- Portfolio item 02 -->
-			<a href="https://peaceful-mountain-33852.herokuapp.com/" class="portfolio__item">
-				<img src="img/starwars.png" class="portfolio__img">
+			<a href="https://wolyslager.github.io/JS-Snake-Game/" class="portfolio__item" target="_blank">
+				<img src="img/snake.png" class="portfolio__img">
 			</a>
 			<!-- Portfolio item 03 -->
-			<a href="https://mighty-temple-84747.herokuapp.com/" class="portfolio__item">
+			<a href="https://mighty-temple-84747.herokuapp.com/" class="portfolio__item" target="_blank">
 				<img src="img/screenshot.png" class="portfolio__img">
 			</a>
 		</div>
@@ -136,15 +136,15 @@
 
 	<!-- Footer -->
 	<footer class="footer">
-		<a href="mailto:olyslager.willy@gmail.com" class="footer__link">Olyslager.willy@gmail.com</a>
+		<a href="mailto:olyslager.willy@gmail.com" class="footer__link" target="_blank">Olyslager.willy@gmail.com</a>
 		<ul class="social-list">
 			<li class="social-list__item">
-				<a class="social-list__link" href="https://github.com/wolyslager">
+				<a class="social-list__link" href="https://github.com/wolyslager" target="_blank">
 					<i class="fab fa-github"></i>
 				</a>
 			</li>
 			<li class="social-list__item">
-				<a class="social-list__link" href="https://www.linkedin.com/in/william-olyslager-082151138/">
+				<a class="social-list__link" href="https://www.linkedin.com/in/william-olyslager-082151138/" target="_blank">
 					<i class="fab fa-linkedin"></i>
 				</a>
 			</li>
